--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pelmen | tracker</title>
-    <meta name="description" content="Frontend Mania | pelmen | tracker | pelmentracker | pelmen tracker | pelmen-pelmen | tracker-tracker | pelmen-tracker " />
+    <meta name="description" content="Frontend Mania | pelmen tracker " />
     <meta name="author" content="Frontend Mania" />
 
 
